Add paginated output of books on main page and set search page
